--- a/beeper-ui/incident-board.html
+++ b/beeper-ui/incident-board.html
@@ -153,7 +153,8 @@
     </footer>
     
     <script>
-        const API_BASE_URL = 'http://localhost:8080/api';
+        // Use relative path so the UI server can proxy requests to the backend
+        const API_BASE_URL = '/api';
         let pendingResolveId = null;
         let allIncidents = [];
 
