--- a/beeper-ui/index.html
+++ b/beeper-ui/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beeper - Share Your Thoughts</title>
+    <title>Beeper - DevOps Incident Board</title>
+    <meta http-equiv="refresh" content="0; url=./incident-board.html" />
+    <script>
+      // Fallback redirect for clients that don't respect meta-refresh
+      window.location.replace('./incident-board.html');
+    </script>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
+    <p>Redirecting to the incident board... <a href="./incident-board.html">Open the incident board</a></p>
   </body>
 </html>
