--- a/beeper-ui/incident-board.html
+++ b/beeper-ui/incident-board.html
@@ -153,8 +153,7 @@
     </footer>
     
     <script>
-        // Use relative path so the UI server can proxy requests to the backend
-        const API_BASE_URL = '/api';
+        const API_BASE_URL = 'http://localhost:8080/api';
         let pendingResolveId = null;
         let allIncidents = [];
 
